Make sure dist can be built from scratch

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
+        <div class="button-row">
+            <div class="button multi-liquify">a</div>
+            <div class="button multi-liquify">ss</div>
+            <div class="button multi-liquify">c</div>
+            <div class="button multi-liquify">d</div>
+        </div>
     </body>
     
 </html>
