basic manifest settings

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     </head>
     <body>
         <div class="button-row">
-            <div class="button multi-liquify">a</div>
-            <div class="button multi-liquify">ss</div>
-            <div class="button multi-liquify">c</div>
-            <div class="button multi-liquify">d</div>
+            <div id="action-multi-liquify" class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+        </div>
+        <div class="button-row">
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
         </div>
     </body>
     
