--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="button-row">
-            <div id="action-multi-liquify" class="button"></div>
+            <div id="fireable-multi-liquify" class="button"></div>
             <div class="button"></div>
             <div class="button"></div>
             <div class="button"></div>
