First working version for multi liquify

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="button-row">
-            <div id="fireable-multi-liquify" class="button"></div>
-            <div class="button"></div>
+            <div id="modal-multi-liquify" class="button" title="Liquify multiple layers at once"></div>
+            <div id="modal-liquify-active-layer-trees" class="button">liquify tree</div>
             <div class="button"></div>
             <div class="button"></div>
         </div>
