--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <body>
         <div class="button-row">
             <div id="modal-multi-liquify" class="button" title="Liquify multiple layers at once"></div>
-            <div id="modal-liquify-active-layer-trees" class="button">liquify tree</div>
+            <div id="modal-pack-and-liquify" class="button"
+                 title="Pack selected layers into a smart object then call liquify"></div>
+            <div id="modal-liquify-layer-trees" class="button"
+                 title="liquify selected layers (and their masks) recursively"></div>
             <div class="button"></div>
             <div class="button"></div>
         </div>
