--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
             <div id="modal-pack-and-liquify" class="button"
                  title="Pack selected layers into a smart object then call liquify"></div>
             <div id="modal-liquify-layer-trees" class="button"
-                 title="liquify selected layers (and their masks) recursively"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+                 title="Liquify selected layers (and their masks) recursively"></div>
+            <div id="modal-clipping-stack-to-group" class="button"
+                 title="Convert a clipping stack to a masked group">CtoG</div>
+            <div id="modal-add-to-upstream-masks" class="button"
+                 title="Merge the layer down, and add its pixels to all upstream groups' masks">AtoUM</div>
         </div>
         <div class="button-row">
             <div class="button"></div>
