--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div id="modal-liquify-layer-trees" class="button"
                  title="Liquify selected layers (and their masks) recursively"></div>
             <div id="modal-clipping-stack-to-group" class="button"
-                 title="Convert a clipping stack to a masked group">CtoG</div>
+                 title="Convert a clipping stack to a masked group"></div>
             <div id="modal-add-to-upstream-masks" class="button"
-                 title="Merge the layer down, and add its pixels to all upstream groups' masks">AtoUM</div>
+                 title="Merge the layer down, and add its pixels to all upstream groups' masks"></div>
         </div>
         <div class="button-row">
             <div class="button"></div>
